test/scc_test/decl/semantic-errors/010.a
010.t:1:1: error: incomplete type is not allowed